feat: discord bot

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ MONGO_URL=""
 MAX_RETRIES="10"
 CRON="0 3 * * *"
 START_TIME="Tue Mar 12 2024 00:10:03 GMT+0700 (Western Indonesia Time)"
+BOT_TOKEN="token"
+TARGET_IDS="target1,target2" #send to multiple channel
