--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys",
     "baileys-bottle": "^2.1.2",
     "canvas": "^2.11.2",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "mongodb": "^3.7.4",
     "node-cron": "^3.0.3",
